trying to fix year output, debugging on mobile #5

--- a/datepicker/datepickerStyle.css
+++ b/datepicker/datepickerStyle.css
@@ -15,7 +15,7 @@ body {
   z-index: 1;
 }
 .dateBtn {
-  border: solid 5px lightgreen;
+  border: solid 5px purple;
   border-radius: 10px;
   padding: 5px;
   font-size: 20px;
